--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "bugs": {
     "url": "https://github.com/fcarelse/Assessment-RestAPI/issues"
   },
-  "homepage": "https://github.com/fcarelse/Assessment-RestAPI#readme"
+  "homepage": "https://github.com/fcarelse/Assessment-RestAPI#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "jest": "^24.9.0"
+  }
 }
