--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "assessment-restapi",
+	"name": "@fcarelse/hapi-api-tasks-rest",
 	"version": "0.0.1",
 	"description": "Task Rest API",
 	"main": "src/tasksAPI.js",
