--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"test": "test"
 	},
 	"scripts": {
+		"start": "node demo",
 		"test": "lab"
 	},
 	"repository": {
@@ -33,5 +34,9 @@
 		"jest": "^24.9.0",
 		"knex": "^0.20.0",
 		"sqlite3": "^4.1.0"
+	},
+	"devDependencies": {
+		"@hapi/inert": "^5.2.2",
+		"hapi": "^18.1.0"
 	}
 }
