Base npm export object includes demo and basicServer for quick demo deployment from npm

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "@fcarelse/hapi-api-tasks-rest",
-	"version": "0.0.3",
+	"version": "0.0.4",
 	"description": "Task Rest API",
-	"main": "src/tasksAPI.js",
+	"main": "index.js",
 	"directories": {
 		"test": "test"
 	},
